undo changes after code review